# PIN-Code

./: .gitignore  INSTALL.md  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: build-backend.yml  integrate-backend.yml  integrate-frontend.yml  integrate.yml
api/: .coverage  .env.example  Dockerfile  pyproject.toml  pytest.ini
api/src/: database.py  dependencies.py  main.py
api/src/cruds/: __init__.py  friendship.py  habit.py  member.py  mood.py  quest.py  streak.py  task.py
api/src/endpoints/: __init__.py  habits.py  members.py
api/src/middleware/: __init__.py  authorization_middleware.py
api/src/models/: __init__.py  activity.py  day_time.py  days_of_the_week.py  frequency.py  friendship.py  habit.py  member.py  mood.py  quest.py  streak.py  task.py
api/src/routers/: __init__.py  friendship.py  habits.py  health.py  members.py  mood.py  moods.py  quests.py  streaks.py  tasks.py
api/src/schemas/: __init__.py  activity.py  category.py  day_time.py  frequency.py  habit.py  member.py  mood.py  quest.py  task.py  type_of_mood.py  types_of_mood.py
api/src/scripts/: __init__.py  db_initialize.py
api/src/services/: __init__.py  authorization.py  config.py  database.py  logger.py
api/src/services/utils/: jwt_utils.py
api/tests/: conftest.py  test_members.py  test_quests.py
api/utilites/: sqlquery.sql
frontend/: .env.example  README.md  build.yaml  pubspec.yaml
frontend/coverage/: lcov.info
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/src/: app.dart  config.dart  (+1 more)
frontend/testing/: app.dart  mocks.dart
(+191 files in other folders)
