[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["HabitUp <agilefans@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-dotenv = "^0.5.2"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
